[package]
name = "dev-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "^0.6.15", features = ["csr"] }
leptos_meta = { version = "^0.6.15" }
leptos_router = { version = "^0.6.15" }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
web-sys = { version = "^0.3", features = [
    "Window",
    "Location",
    "Navigator",
    "Clipboard",
    "HtmlTextAreaElement",
    "Storage"
] }
base64 = "0.21"
urlencoding = "2.1"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_lenient = "0.1"
serde_yaml = "0.9"
chrono = "0.4"
cron = "0.12"
rust-i18n = "2.0"

[build-dependencies]
rust-i18n-support = "2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1